# agent-system

./: .env.example  README.md  pyproject.toml
agent_system/: __init__.py  agent_learning_utils.py  akc_http_client.py  config.py  learning_integration.py  orchestrator_hooks.py
agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent_system/agents/: __init__.py  mcp-agent.md  orchestrator.md  qc-agent.md  script-agent.md
agent_system/agents/mcp/: __init__.py  config.yaml  prompt.md
agent_system/agents/mcp/model/: haiku-4.5.md  sonnet-4.6.md
agent_system/agents/orchestrator/: config.yaml  prompt.md
agent_system/agents/orchestrator/model/: haiku-4.5.md  sonnet-4.6.md
agent_system/agents/qc/: __init__.py  config.yaml  prompt.md
agent_system/agents/qc/model/: haiku-4.5.md  sonnet-4.6.md
agent_system/agents/script/: __init__.py  config.yaml  prompt.md
agent_system/agents/script/model/: haiku-4.5.md  sonnet-4.6.md
agent_system/skills/: __init__.py  skill_logging.py
agent_system/skills/godot-mcp-task/: SKILL.md  skill.yaml
agent_system/skills/godot-orchestrator-gate/: SKILL.md  skill.yaml
agent_system/skills/godot-script-task/: SKILL.md  skill.yaml
agent_system/skills/godot-task-verify/: SKILL.md  skill.yaml
docs/: CAPABILITIES.md  CONFIGURATION.md  ERROR_HANDLING.md  GODOT_INTEGRATION.md  TROUBLESHOOTING.md
docs/superpowers/specs/: 2026-05-05-akc-wiring-design.md
examples/: minimal_usage.py
tests/: test_agent_learning_utils.py  test_akc_http_client.py  test_config.py  test_learning_integration.py  test_orchestrator_hooks.py
