[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system"
version = "0.1.0"
description = "Portable Claude agent coordination system for Godot projects"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_system*"]
